<resources>
    <string name="app_name">DoAnDiDong</string>
    <string-array name="listcoffee">
        <item >Cafe</item>
        <item>Cà Phê Đá</item><item>Cà Phê Sữa</item><item>Cà Phê Chồn</item>
        <item>Cà Phê Rum</item><item >Capuchino</item>
        <item >Expresso</item>



    </string-array>
    <string-array name="listsinhto">
        <item>Sinh Tố</item><item>Sinh Tố Ớt</item><item>Sinh Tố Tỏi</item><item>Sinh Tố Hành</item><item >Sinh Tố Pơ</item>
        <item >Sinh Tố Dừa</item>



        <item >Sinh Tố Mãng Cầu</item>

    </string-array>
    <string name="tenquan_hoadon">PINEAPPLE COFFEE</string>
    <string name="diachi_hoadon">Địa chỉ: 53 Võ Văn Ngân-P.Linh Chiểu-Q.Thủ Đức</string>
    <string name="sdt_hoadon">ĐT: 0914566781</string>
    <string name="hoadonthanhtoan">HÓA ĐƠN THANH TOÁN</string>
    <string name="thungan_hoadon">Thu Ngân: </string>
    <string name="ngay_hoadon">Ngày: </string>
    <string name="sohoadon_hoadon">Số hóa đơn: </string>
    <string name="Ban_hoadon">Bàn: </string>
    <string name="tongcong_hoadon">Tổng cộng:</string>
    <string name="vat_hoadon">VAT:</string>
    <string name="thanhtoan_hoadon">Thanh Toán </string>
    <string-array name="listsoluongcoffee">
        <item >Số lượng</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>
    <string-array name="listsoluongsinhto">
        <item>Số lượng</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>

    </string-array>
    <string-array name="listthuoc">
        <item>Thuốc hút</item>
        <item >555</item>
        <item >Marboro</item>
        <item >Caraven</item>
        <item >JET</item>
    </string-array>
    <string-array name="listsoluongthuoc">
        <item>Số lượng</item>
        <item >1 gói</item>
        <item >2 gói</item>
        <item >3 gói</item>
        <item >4 gói</item>
    </string-array>
    <string-array name="listkhac">
        <item >giải khát</item>
        <item >Nước Suối</item>
        <item >La Hán Quả</item>
        <item >Lipton Đá</item>
        <item >Lipton Nóng</item>
        <item >Trái Cây Đĩa</item>
    </string-array>
    <string-array name="listsoluongkhac">
        <item>Số lượng</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
    </string-array>
    <string-array name="listnuocep">
        <item>nước trái cây</item>
        <item >Đá Chanh</item>
        <item >Cam Vắt</item>
        <item >Chanh Dây</item>
        <item >Rau Má</item>
        <item >Đá Me</item>
    </string-array>
    <string-array name="listsoluongnuocep">
        <item>số lượng</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
    </string-array>
    <string-array name="listnuocngot">
        <item />nước ngọt<item >CoCa Cola</item>

        <item >PepSi</item>
        <item >Sting</item>
        <item >Xá Xị</item>
        <item >Twister</item>
    </string-array>
    <string-array name="listsoluongnuocngot">
        <item />số lượng<item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>

    </string-array>

    <string name="tvSoBan">Số bàn: </string>
    <string name="tvSoHD">Số hóa đơn: </string>
    <string name="tvThuNgan">Thu ngân: </string>
    <string name="tvGia">Giá: </string>
    <string name="tvSoLuong">Số lượng: </string>
    <string name="tvVAT">VAT: </string>
    <string name="tvTongCong">Tổng cộng: </string>
    <string name="edtSoLuong">0</string>
    <string name="btnXuatHD">XUẤT HÓA ĐƠN</string>
    <string name="btnBack">TRỞ VỀ</string>
</resources>